Bug 1554664 - Work-around broken border-radius caching. r=mattwoodrow a=jcristau

This is just a super-low-risk work-around for bug 1554755 that we can uplift to
beta, I'll follow-up in a bit in there with a fix and a test.

The reason my patch breaks this is because my patch stopped making images
reframe.

The reframe was of course a very expensive way of invalidating that bit ;)

Differential Revision: https://phabricator.services.mozilla.com/D32749

--HG--
extra : source : 0765f0fa75605655beb1eb98afc7584364efb846