layout/generic/nsImageFrame.cpp
@@ -833,6 +833,8 @@ void nsImageFrame::NotifyNewCurrentRequest(imgIRequest* aRequest,
     }
     // Update border+content to account for image change
     InvalidateFrame();
+    // FIXME(emilio): This just workarounds bug 1554755.
+    mMayHaveRoundedCorners = true;
   }
 }
 
